# public/swagger.json
@@ -21,11 +21,19 @@
 					},
 					"email_address": {
 						"type": "string"
+					},
+					"role_user": {
+						"type": "string",
+						"enum": [
+							"client",
+							"admin"
+						]
 					}
 				},
 				"required": [
 					"id",
-					"email_address"
+					"email_address",
+					"role_user"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -97,6 +105,13 @@
 					},
 					"email_address": {
 						"type": "string"
+					},
+					"role_user": {
+						"type": "string",
+						"enum": [
+							"client",
+							"admin"
+						]
 					}
 				},
 				"type": "object",
@@ -480,10 +495,18 @@
 					},
 					"email_address": {
 						"type": "string"
+					},
+					"role_user": {
+						"type": "string",
+						"enum": [
+							"client",
+							"admin"
+						]
 					}
 				},
 				"required": [
-					"email_address"
+					"email_address",
+					"role_user"
 				],
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
@@ -502,6 +525,23 @@
 				"name": "jwt",
 				"in": "header",
 				"authorizationUrl": "http://swagger.io/api/oauth/dialog"
+			},
+			"api_key": {
+				"type": "apiKey",
+				"name": "access_token",
+				"in": "query"
+			},
+			"tsoa_auth": {
+				"type": "oauth2",
+				"flows": {
+					"implicit": {
+						"authorizationUrl": "http://swagger.io/api/oauth/dialog",
+						"scopes": {
+							"write:pets": "modify things",
+							"read:pets": "read things"
+						}
+					}
+				}
 			}
 		}
 	},
@@ -716,7 +756,13 @@
 					}
 				},
 				"description": "Création d'un film",
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"admin"
+						]
+					}
+				],
 				"parameters": [],
 				"requestBody": {
 					"required": true,
@@ -774,7 +820,13 @@
 					}
 				},
 				"description": "Mise à jour d'un film",
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"admin"
+						]
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -812,7 +864,13 @@
 					}
 				},
 				"description": "Supprime un film",
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"admin"
+						]
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -934,11 +992,15 @@
 							"application/json": {
 								"schema": {
 									"properties": {
+										"token": {
+											"type": "string"
+										},
 										"ok": {
 											"type": "boolean"
 										}
 									},
 									"required": [
+										"token",
 										"ok"
 									],
 									"type": "object"
@@ -968,6 +1030,18 @@
 						}
 					}
 				}
+			}
+		},
+		"/auth/renew": {
+			"post": {
+				"operationId": "RefreshToken",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"security": [],
+				"parameters": []
 			}
 		},
 		"/auth/authorize": {
